arregledo errores de enrutamiento , añadido login, y varios retoques a la maquetacion del header y del footer

--- a/src/core/footer/footer.component.html
+++ b/src/core/footer/footer.component.html
@@ -1,1 +1,23 @@
-<p>footer works!</p>
+<footer>
+    <div className="horarios">
+        <img src="../../assets/icons/horario.svg" alt="reloj horario" />
+        <p>Lunes-Viernes: 10:00-14:00 16:00-20:00</p>
+        <p> Sabados: 10:00-14:00</p>
+    </div>
+    <div className="info">
+        <div className="email">
+            <img src="../../assets/icons/Mail.svg" alt="simbolo de correo" />
+            <p>Jsalgua&#64;g.educand.es</p>
+        </div>
+        <div className="telefono">
+            <img src="../../assets/icons/Phone.svg" alt="simbolo de telefono" />
+            <p>952656565</p>
+        </div>
+    </div>
+    <div className="redes-sociales">
+        <p>Siguenos en:</p>
+        <img src="../../assets/icons/IG2.svg" alt="simbolo de IG" />
+        <img src="../../assets/icons/FaceBook.svg" alt="simbolo de Facebook" />
+        <img src="../../assets/icons/Twitter.svg" alt="simbolo de Twitter" />
+    </div>
+</footer>
