--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,30 +1,18 @@
 <div class="login-container">
+
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <div class="form-group">
       <label for="username">Nombre de Usuario</label>
-      <input
-        type="text"
-        id="username"
-        name="username"
-        ngModel
-        required
-        class="form-control"
-      />
+      <input type="text" id="username" name="username" ngModel required class="form-control" />
     </div>
     <div class="form-group">
       <label for="password">Contraseña</label>
-      <input
-        type="password"
-        id="password"
-        name="password"
-        ngModel
-        required
-        class="form-control"
-      />
+      <input type="password" id="password" name="password" ngModel required class="form-control" />
     </div>
     <button type="button" class="btn btn-primary">Entrar</button>
     <button type="button" class="btn btn-secondary" (click)="createAccount()">
       Crear Cuenta
     </button>
   </form>
+
 </div>
