--- a/src/pages/form-cuenta/form-cuenta.component.scss
+++ b/src/pages/form-cuenta/form-cuenta.component.scss
@@ -1,4 +1,4 @@
-.form-login {
+.form-cuenta {
     background-color: #f8f9fa;
     /* Color de fondo, por ejemplo */
     padding: 5px;
@@ -12,13 +12,13 @@
     flex-direction: column;
     justify-content: center;
     /* Centro vertical de los elementos */
-    height: 60vh;
+    height: 70vh;
     /* Ocupa todo el alto disponible */
     box-shadow: 0 25px 40px rgba(0, 0, 0, 0.1);
     /* Añade sombra */
 }
 
-.form-login form {
+.form-cuenta form {
     width: 100%;
     /* Asegúrate de que el formulario ocupe todo el ancho disponible */
     display: flex;
@@ -27,20 +27,20 @@
     /* Centro horizontal de los elementos dentro del formulario */
 }
 
-.form-login form h2 {
-    margin-bottom: 20px;
+.form-cuenta form h1 {
+    margin-bottom: 15px;
     /* Espacio abajo del título */
+
 }
 
-.form-login form .form-group {
+.form-cuenta form .form-group {
     width: 100%;
     /* Asegúrate de que cada grupo de formulario ocupe todo el ancho disponible */
     margin-bottom: 15px;
     /* Espacio entre los grupos de formulario */
-
 }
 
-.form-login form .btn {
+.form-cuenta form .btn {
     margin-top: 10px;
     /* Espacio arriba del botón */
 }
@@ -49,4 +49,5 @@
     background-color: black;
     border-color: black;
     color: white;
+
 }
