--- a/src/pages/inicio/inicio.component.html
+++ b/src/pages/inicio/inicio.component.html
@@ -1,1 +1,28 @@
-<p>inicio works!</p>
+<nav>
+    <ul>
+        <li>
+            <div class="inicio-pages">
+                <img src="../../assets/inicio/Inicio_surf.jpg" alt="Logo de la tienda del menú" />
+                <h2 class="categoria-inicio">SURF</h2>
+            </div>
+        </li>
+        <li>
+            <div class="inicio-pages">
+                <img src="../../assets/inicio/Inicio_body.jpg" alt="Logo de la tienda del menú" />
+                <h2 class="categoria-inicio">BODYBOARD</h2>
+            </div>
+        </li>
+        <li>
+            <div class="inicio-pages">
+                <img src="../../assets/inicio/Inicio_Skate.jpg" alt="Logo de la tienda del menú" />
+                <h2 class="categoria-inicio">SKATE</h2>
+            </div>
+        </li>
+        <li>
+            <div class="inicio-pages">
+                <img src="../../assets/inicio/Inicio_neoprenos.jpg" alt="Logo de la tienda del menú" />
+                <h2 class="categoria-inicio">NEOPRENOS</h2>
+            </div>
+        </li>
+    </ul>
+</nav>
