--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -2,8 +2,8 @@
 
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <div class="form-group">
-      <label for="username">Nombre de Usuario</label>
-      <input type="text" id="username" name="username" ngModel required class="form-control" />
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" ngModel required class="form-control" />
     </div>
     <div class="form-group">
       <label for="password">Contraseña</label>
