arreglado el css de la ventana modal del menu, cambios en el carrito

--- a/src/core/header/header.component.html
+++ b/src/core/header/header.component.html
@@ -18,7 +18,7 @@
             </button>
         </li>
         <li className="carro">
-            <button (click)="openBottom(carrito)">
+            <button (click)="openEnd(carrito)">
                 <img src="../../assets/icons/Carro.svg" alt="Carro" />
             </button>
         </li>
@@ -63,6 +63,27 @@
         </div>
         <div class="offcanvas-body  custom-offcanvas-body">
             <p>One fine body&hellip;</p>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+            <div class="div">loco1</div>
+
             <div class="text-end">
                 <button type="button" class="btn btn-outline-secondary"
                     (click)="offcanvas.close('Close click')">Close</button>
