--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,25 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
-.custom-offcanvas {
-    width: 100% !important;
-    height: 100% !important;
-    top: 0 !important;
-    left: 0 !important;
-    bottom: 0 !important;
-    right: 0 !important;
-    border: none !important;
-    border-radius: 0 !important;
-    overflow: hidden !important;
+
+/*Estilos para el modal  Menu*/
+
+
+body > ngb-offcanvas-panel > div.offcanvas-header h3 {
+   text-align: center;
+   color: #02799A;
 }
 
-.custom-offcanvas .offcanvas-body {
-    height: 100%;
+body > ngb-offcanvas-panel > div.offcanvas-body > ul{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
-.custom-offcanvas .btn-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+body > ngb-offcanvas-panel > div.offcanvas-body > ul>li{
+    margin: 1px;
+    border-bottom: 3px solid #02799A;
 }
