--- a/src/core/footer/footer.component.html
+++ b/src/core/footer/footer.component.html
@@ -1,8 +1,11 @@
 <footer>
     <div class="horarios">
         <img src="../../assets/icons/horario.svg" alt="reloj horario" />
-        <p>Lunes-Viernes: 10:00-14:00 16:00-20:00</p>
-        <p> Sabados: 10:00-14:00</p>
+        <div class="letras-horas">
+            <div>Lunes-Viernes: 10:00-14:00 16:00-20:00</div>
+        <div>Sabados: 10:00-14:00</div> 
+        </div>
+        
     </div>
     <div class="info">
         <div class="email">
