--- a/src/core/footer/footer.component.scss
+++ b/src/core/footer/footer.component.scss
@@ -27,7 +27,16 @@ footer {
 .horarios{
     width: 45%;
     display: flex;
-   margin: 8px;
+   margin: 5px;
+}
+.horarios img{
+    flex: 0
+}
+.letras-horas {
+    margin: 2px;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
 }
 .info{
     width:45%;
