--- a/src/core/footer/footer.component.scss
+++ b/src/core/footer/footer.component.scss
@@ -38,6 +38,9 @@ footer {
     display: flex;
     flex-direction: column;
 }
+.letras-horas div{
+    width: 100%;
+}
 .info{
     width:45%;
     margin: 8px;
