--- a/src/core/header/header.component.scss
+++ b/src/core/header/header.component.scss
@@ -109,3 +109,11 @@ ul li button {
     max-width: 100%;
     /* Asegura que el logo no exceda el tamaño del contenedor */
 }
+
+/*CARRITO DE  COMPRAS*/
+
+.card-contenedor {
+    border: 1px solid #02799A;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
