--- a/src/core/header/header.component.html
+++ b/src/core/header/header.component.html
@@ -61,24 +61,31 @@
             <button type="button" class="btn-close" aria-label="Close"
                 (click)="offcanvas.dismiss('Cross click')"></button>
         </div>
-        <div class="offcanvas-body  custom-offcanvas-body">
+        <div class="offcanvas-body  custom-offcanvas-body justify-content-center">
             <div class="card-contenedor" *ngFor="let item of productosCarrito">
-                <img [src]="item.producto.foto_producto" alt="{{ item.producto.descripcion }}" class="card-img-top" />
                 <div class="card-body">
+                    <div class="card-img">
+                        <img [src]="item.producto.foto_producto" alt="{{ item.producto.descripcion }}"
+                            class="card-img-top" />
+                    </div>
                     <div class="card-carrito-datos">
                         <h5 class="card-title">{{ item.producto.marca_producto }}</h5>
                         <p class="card-text">{{ item.producto.descripcion }}</p>
                         <p class="card-price">{{ item.producto.precio | currency }}</p>
                     </div>
-                    <div class="card-botones-cantidad">
-                        <button class="btn btn-primary" (click)="aumentarCantidad(item.producto)">+</button>
-                        <span>{{ item.cantidad }}</span>
-                        <button class="btn btn-danger" (click)="disminuirCantidad(item.producto)">-</button>
-
-                    </div>
                 </div>
+                <div class="card-botones-cantidad">
+                    <button class="btn btn-primary" (click)="aumentarCantidad(item.producto)">+</button>
+                    <span>{{ item.cantidad }}</span>
+                    <button class="btn btn-danger" (click)="disminuirCantidad(item.producto)">-</button>
+
+                </div>
+
             </div>
             <div class="text-end">
+                <div class="total-pedido">
+                    <h4>Total: {{ totalCompra | currency }}</h4>
+                </div>
                 <button type="button" class="btn btn-outline-secondary"
                     (click)="offcanvas.close('Close click'); hacePedido()">Confirmar Pedido</button>
             </div>
