--- a/src/pages/login/login.component.html
+++ b/src/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="form-login">
 
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
+    <h2>Iniciar Sesión</h2>
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" id="email" name="email" ngModel required class="form-control" />
