--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,3 +17,7 @@ body > ngb-offcanvas-panel > div.offcanvas-body > ul>li{
     margin: 1px;
     border-bottom: 3px solid #02799A;
 }
+.btn-primary { background-color: #02799A; 
+    /* Cambia este valor al color que prefieras */
+     border-color: #02799A; /* Cambia este valor al color que prefieras */ 
+}
