--- a/src/pages/admin-productos/admin-productos.component.html
+++ b/src/pages/admin-productos/admin-productos.component.html
@@ -43,11 +43,12 @@
         class="form-control"
       >
         <option value="" disabled selected>Selecciona una categoría</option>
-        <option value="surf">Surf</option>
-        <option value="body">Bodyboard</option>
-        <option value="skate">Skate</option>
-        <option value="neoprenos">Neoprenos</option>
-        <!-- Agrega más opciones según tus necesidades -->
+        <option
+          *ngFor="let categoria of categorias"
+          [value]="categoria.id_categoria"
+        >
+          {{ categoria.nombre_categoria }}
+        </option>
       </select>
     </div>
     <div class="form-group">
@@ -76,25 +77,30 @@
     </button>
   </form>
 </div>
+
 <div class="articulos-categorias">
   <div class="form-group">
     <label for="categoriaSelector">Seleccionar Categoría</label>
     <select
       id="categoriaSelector"
       class="form-control"
-      
+      (change)="filtrarArticulos($event)"
     >
-    <option value="" disabled selected>Selecciona una categoría</option>
-    <option value="surf">Surf</option>
-    <option value="body">Bodyboard</option>
-    <option value="skate">Skate</option>
-    <option value="neoprenos">Neoprenos</option>
+      <option value="" disabled [selected]="categoriaSeleccionada === null">Selecciona una categoría</option>
+      <option
+        *ngFor="let categoria of categorias"
+        [value]="categoria.id_categoria"
+      >
+        {{ categoria.nombre_categoria }}
+      </option>
     </select>
   </div>
-  <div class="lista-articulos">
+  <div class="lista-articulos" *ngIf="articulosFiltrados.length > 0">
     <h3>Artículos</h3>
     <ul>
-      <li *ngFor="let articulo of articulosFiltrados">{{ articulo.nombre }}</li>
+      <li *ngFor="let articulo of articulosFiltrados">
+        {{ articulo.marca_producto }}
+      </li>
     </ul>
   </div>
 </div>
