--- a/src/pages/admin-productos/admin-productos.component.scss
+++ b/src/pages/admin-productos/admin-productos.component.scss
@@ -5,3 +5,24 @@
 button{
     margin-top:10px;
 }
+
+
+.contenedor-productos{
+   
+display: flex;
+justify-content: center;
+}
+.formulario{
+   
+    width: 50%;
+}
+
+
+.articulos-categorias{
+    width: 100%;
+}
+
+.form-group-categorias{
+    width: 20%;
+}
+
