--- a/src/pages/panel-control-admin/panel-control-admin.component.html
+++ b/src/pages/panel-control-admin/panel-control-admin.component.html
@@ -10,28 +10,15 @@
         <li [ngbNavItem]="2">
             <button ngbNavLink>PEDIDOS</button>
             <ng-template ngbNavContent>
-                <p>
-                    Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko
-                    farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts
-                    ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar
-                    helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson
-                    8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester
-                    stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.
-                </p>
+                
+                    <h1>AQUI LA LISTA DE PEDIDOS</h1>
+                
             </ng-template>
         </li>
         <li [ngbNavItem]="3">
             <button ngbNavLink>USUARIOS</button>
             <ng-template ngbNavContent>
-                <p>
-                    Sed commodo, leo at suscipit dictum, quam est porttitor sapien, eget sodales nibh elit id diam. Nulla facilisi.
-                    Donec egestas ligula vitae odio interdum aliquet. Duis lectus turpis, luctus eget tincidunt eu, congue et odio.
-                    Duis pharetra et nisl at faucibus. Quisque luctus pulvinar arcu, et molestie lectus ultrices et. Sed diam urna,
-                    egestas ut ipsum vel, volutpat volutpat neque. Praesent fringilla tortor arcu. Vivamus faucibus nisl enim, nec
-                    tristique ipsum euismod facilisis. Morbi ut bibendum est, eu tincidunt odio. Orci varius natoque penatibus et
-                    magnis dis parturient montes, nascetur ridiculus mus. Mauris aliquet odio ac lorem aliquet ultricies in eget
-                    neque. Phasellus nec tortor vel tellus pulvinar feugiat.
-                </p>
+                <h1>LISTA DE USUARIOS</h1>
             </ng-template>
         </li>
     </ul>
