iniciado los pedidos en la parte admin

--- a/src/pages/admin-pedidos/admin-pedidos.component.html
+++ b/src/pages/admin-pedidos/admin-pedidos.component.html
@@ -1,1 +1,10 @@
-<p>admin-pedidos works!</p>
+<div class="contenedor-pedidos">
+    <form action="">
+        <label for="categoria">Categoría</label>
+        <select id="categoria" name="categoria" ngModel required class="form-control">
+            <option value="" diable selected>Seleccione Estado pedido</option>
+        </select>
+
+
+    </form>
+</div>
